Updated list of Maths A and B examples sheets

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -46,20 +46,6 @@
 
     <p>  From 2024-2025, I supervised the Part IA Mathematics for Natural Sciences course, and will be doing so again in 2025-2026. Here are my examples sheets.</p>
 
-<!--
-    <h3>Mathematics A</h3>
-    <p>
-    1. Vectors, lines and the scalar product<br>
-    2. Planes and the vector product<br>
-    3. Vector area, coordinate systems, and Cartesian complex numbers<br>
-    4. Euler's formula and hyperbolic functions<br>
-    5. Differentiation and curve-sketching<br>
-    6. Integration<br>
-    7. Power series and numerical methods<br>
-    8. Probability
-    </p>
--->
-
       <h3>Mathematics A</h3>
       <p>1. <a href="ExSheets/NatSciMaths/maths_a_sheet_1.pdf">Basics of vector geometry, and the scalar product</a><br>
          2. <a href="ExSheets/NatSciMaths/maths_a_sheet_2.pdf">The vector product, and triple products of vectors</a><br>
@@ -69,12 +55,24 @@
          6. <a href="ExSheets/NatSciMaths/maths_a_sheet_6.pdf">Methods of integration</a><br>
          7. <a href="ExSheets/NatSciMaths/maths_a_sheet_7.pdf">Taylor series, and Newton-Raphson iteration</a><br>
          8. <a href="ExSheets/NatSciMaths/maths_a_sheet_8.pdf">Probability spaces, conditional probability, and combinatorics</a><br>
-         9. <a href="ExSheets/NatSciMaths/maths_a_sheet_9.pdf">Discrete and continuous random variables, and functions of random variables</a>
-<!--
-         10. <a href="">First-order differential equations</a><br>
-         11. <a href="">Linear differential equations</a><br>
-         12. <a href="">Partial differentiation</a>
---!>
+         9. <a href="ExSheets/NatSciMaths/maths_a_sheet_9.pdf">Discrete and continuous random variables, and functions of random variables</a><br><br>
+
+         <i>Michaelmas revision sheet</i><br><br>
+
+         10. First-order ordinary differential equations<br>
+         11. Linear ordinary differential equations<br>
+         12. Partial differentiaion and differentials<br>
+         13. The multivariable chain rule and exact differentials<br>
+         14. Contour sketching<br>
+         15. Multivariable integration and Gaussian integrals<br>
+         16. Scalar and vector fields, and line integrals<br>
+         17. Surface integrals and the integral theorems<br><br>
+
+         <i>Lent revision sheet</i><br><br>
+
+         18. Matrix algebra I<br>
+         19. Matrix algebra II<br>
+         20. Fourier series
       </p>
 
       <h3>Mathematics B</h3>
@@ -83,7 +81,27 @@
         3. <a href="ExSheets/NatSciMaths/maths_b_sheet_3.pdf">Complex numbers and hyperbolic functions</a><br>
         4. <a href="ExSheets/NatSciMaths/maths_b_sheet_4.pdf">Differential calculus, limits and continuity</a><br>
         5. <a href="ExSheets/NatSciMaths/maths_b_sheet_5.pdf">Infinite series and Taylor series</a><br>
-        6. <a href="ExSheets/NatSciMaths/maths_b_sheet_6.pdf">Single-variable integration</a>
+        6. <a href="ExSheets/NatSciMaths/maths_b_sheet_6.pdf">Single-variable integration</a><br>
+        7. Multivariable integration and Gaussian integrals<br>
+        8. Probability spaces, conditional probability, and combinatorics<br>
+        9. Discrete and continuous random variables, and functions of random variables<br><br>
+
+         <i>Michaelmas revision sheet</i><br><br>
+
+         10. First-order ordinary differential equations<br>
+         11. Linear ordinary differential equations<br>
+         12. Partial differentiaion and differentials<br>
+         13. The multivariable chain rule and exact differentials<br>
+         14. Contour sketching and conditional optimisation<br>
+         15. Scalar and vector fields, and line integrals<br>
+         16. Surface integrals and the integral theorems<br>
+         17. Fourier series<br><br>
+
+         <i>Lent revision sheet</i><br><br>
+
+         18. Matrix algebra I<br>
+         19. Matrix algebra II<br>
+         20. Partial differential equations
       </p>
 
     <hr width=90%>
