Added bullet points

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -57,7 +57,7 @@
          8. <a href="ExSheets/NatSciMaths/maths_a_sheet_8.pdf">Probability spaces, conditional probability, and combinatorics</a><br>
          9. <a href="ExSheets/NatSciMaths/maths_a_sheet_9.pdf">Discrete and continuous random variables, and functions of random variables</a><br><br>
 
-         <i>Michaelmas revision sheet</i><br><br>
+         ❧ <i>Michaelmas revision sheet</i><br><br>
 
          10. First-order ordinary differential equations<br>
          11. Linear ordinary differential equations<br>
@@ -68,7 +68,7 @@
          16. Scalar and vector fields, and line integrals<br>
          17. Surface integrals and the integral theorems<br><br>
 
-         <i>Lent revision sheet</i><br><br>
+         ❧ <i>Lent revision sheet</i><br><br>
 
          18. Matrix algebra I<br>
          19. Matrix algebra II<br>
@@ -86,7 +86,7 @@
         8. Probability spaces, conditional probability, and combinatorics<br>
         9. Discrete and continuous random variables, and functions of random variables<br><br>
 
-         <i>Michaelmas revision sheet</i><br><br>
+         ❧ <i>Michaelmas revision sheet</i><br><br>
 
          10. First-order ordinary differential equations<br>
          11. Linear ordinary differential equations<br>
@@ -97,7 +97,7 @@
          16. Surface integrals and the integral theorems<br>
          17. Fourier series<br><br>
 
-         <i>Lent revision sheet</i><br><br>
+         ❧ <i>Lent revision sheet</i><br><br>
 
          18. Matrix algebra I<br>
          19. Matrix algebra II<br>
