--- a/physics_notes.html
+++ b/physics_notes.html
@@ -55,9 +55,9 @@
          6. <a href="ExSheets/NatSciMaths/maths_a_sheet_6.pdf">Methods of integration</a><br>
          7. <a href="ExSheets/NatSciMaths/maths_a_sheet_7.pdf">Taylor series, and Newton-Raphson iteration</a><br>
          8. <a href="ExSheets/NatSciMaths/maths_a_sheet_8.pdf">Probability spaces, conditional probability, and combinatorics</a><br>
-         9. <a href="ExSheets/NatSciMaths/maths_a_sheet_9.pdf">Discrete and continuous random variables, and functions of random variables</a><br><br>
+         9. <a href="ExSheets/NatSciMaths/maths_a_sheet_9.pdf">Discrete and continuous random variables, and functions of random variables</a><br>
 
-         ❧ <i>Michaelmas revision sheet</i><br><br>
+         ❧ <i>Michaelmas revision sheet</i><br>
 
          10. First-order ordinary differential equations<br>
          11. Linear ordinary differential equations<br>
@@ -66,9 +66,9 @@
          14. Contour sketching<br>
          15. Multivariable integration and Gaussian integrals<br>
          16. Scalar and vector fields, and line integrals<br>
-         17. Surface integrals and the integral theorems<br><br>
+         17. Surface integrals and the integral theorems<br>
 
-         ❧ <i>Lent revision sheet</i><br><br>
+         ❧ <i>Lent revision sheet</i><br>
 
          18. Matrix algebra I<br>
          19. Matrix algebra II<br>
@@ -84,9 +84,9 @@
         6. <a href="ExSheets/NatSciMaths/maths_b_sheet_6.pdf">Single-variable integration</a><br>
         7. Multivariable integration and Gaussian integrals<br>
         8. Probability spaces, conditional probability, and combinatorics<br>
-        9. Discrete and continuous random variables, and functions of random variables<br><br>
+        9. Discrete and continuous random variables, and functions of random variables<br>
 
-         ❧ <i>Michaelmas revision sheet</i><br><br>
+         ❧ <i>Michaelmas revision sheet</i><br>
 
          10. First-order ordinary differential equations<br>
          11. Linear ordinary differential equations<br>
@@ -95,9 +95,9 @@
          14. Contour sketching and conditional optimisation<br>
          15. Scalar and vector fields, and line integrals<br>
          16. Surface integrals and the integral theorems<br>
-         17. Fourier series<br><br>
+         17. Fourier series<br>
 
-         ❧ <i>Lent revision sheet</i><br><br>
+         ❧ <i>Lent revision sheet</i><br>
 
          18. Matrix algebra I<br>
          19. Matrix algebra II<br>
