Fixed spelling error

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -62,7 +62,7 @@
 
          10. First-order ordinary differential equations<br>
          11. Linear ordinary differential equations<br>
-         12. Partial differentiaion and differentials<br>
+         12. Partial differentiation and differentials<br>
          13. The multivariable chain rule and exact differentials<br>
          14. Contour sketching<br>
          15. Multivariable integration and Gaussian integrals<br>
@@ -91,7 +91,7 @@
 
          10. First-order ordinary differential equations<br>
          11. Linear ordinary differential equations<br>
-         12. Partial differentiaion and differentials<br>
+         12. Partial differentiation and differentials<br>
          13. The multivariable chain rule and exact differentials<br>
          14. Contour sketching and conditional optimisation<br>
          15. Scalar and vector fields, and line integrals<br>
