--- a/physics_notes.html
+++ b/physics_notes.html
@@ -47,6 +47,9 @@
 
     In 2024-2025, I supervised the Part IA Mathematics for Natural Sciences course, and will be doing so again in 2025-2026. Here are my examples sheets.</p>
 
+ <div class="row">
+  <div class="column">
+
       <h3>Mathematics A</h3>
       <p>1. <a href="ExSheets/NatSciMaths/maths_a_sheet_1.pdf">Basics of vector geometry, and the scalar product</a><br>
          2. <a href="ExSheets/NatSciMaths/maths_a_sheet_2.pdf">The vector product, and triple products of vectors</a><br>
@@ -54,7 +57,7 @@
          4. <a href="ExSheets/NatSciMaths/maths_a_sheet_4.pdf">More complex numbers, and hyperbolic functions</a><br>
          5. <a href="ExSheets/NatSciMaths/maths_a_sheet_5.pdf">Differential calculus, Riemann sums, and basic integrals</a><br>
          6. <a href="ExSheets/NatSciMaths/maths_a_sheet_6.pdf">Methods of integration</a><br>
-         7. <a href="ExSheets/NatSciMaths/maths_a_sheet_7.pdf">Taylor series, and Newton-Raphson iteration</a><br>
+         7. <a href="ExSheets/NatSciMaths/maths_a_sheet_7.pdf">Taylor series, and Newton-Raphson iteration</a><br><br>
          8. <a href="ExSheets/NatSciMaths/maths_a_sheet_8.pdf">Probability spaces, conditional probability, and combinatorics</a><br>
          9. <a href="ExSheets/NatSciMaths/maths_a_sheet_9.pdf">Discrete and continuous random variables, and functions of random variables</a><br>
 
@@ -75,13 +78,15 @@
          19. Matrix algebra II<br>
          20. Fourier series
       </p>
+</div>
 
+<div class="column">
       <h3>Mathematics B</h3>
       <p>1. <a href="ExSheets/NatSciMaths/maths_b_sheet_1.pdf">Basics of vector geometry, and the scalar and vector products</a><br>
         2. <a href="ExSheets/NatSciMaths/maths_b_sheet_2.pdf">Further vector geometry, triple products, vector area, and polar coordinate systems</a><br>
-        3. <a href="ExSheets/NatSciMaths/maths_b_sheet_3.pdf">Complex numbers and hyperbolic functions</a><br>
-        4. <a href="ExSheets/NatSciMaths/maths_b_sheet_4.pdf">Differential calculus, limits and continuity</a><br>
-        5. <a href="ExSheets/NatSciMaths/maths_b_sheet_5.pdf">Infinite series and Taylor series</a><br>
+        3. <a href="ExSheets/NatSciMaths/maths_b_sheet_3.pdf">Complex numbers and hyperbolic functions</a><br><br>
+        4. <a href="ExSheets/NatSciMaths/maths_b_sheet_4.pdf">Differential calculus, limits and continuity</a><br><br>
+        5. <a href="ExSheets/NatSciMaths/maths_b_sheet_5.pdf">Infinite series and Taylor series</a><br><br>
         6. <a href="ExSheets/NatSciMaths/maths_b_sheet_6.pdf">Single-variable integration</a><br>
         7. Multivariable integration and Gaussian integrals<br>
         8. Probability spaces, conditional probability, and combinatorics<br>
@@ -104,6 +109,9 @@
          19. Matrix algebra II<br>
          20. Partial differential equations
       </p>
+
+</div>
+</div>
 
     <hr width=90%>
 
