Removed extra <br>

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -57,7 +57,7 @@
          4. <a href="ExSheets/NatSciMaths/maths_a_sheet_4.pdf">More complex numbers, and hyperbolic functions</a><br>
          5. <a href="ExSheets/NatSciMaths/maths_a_sheet_5.pdf">Differential calculus, Riemann sums, and basic integrals</a><br>
          6. <a href="ExSheets/NatSciMaths/maths_a_sheet_6.pdf">Methods of integration</a><br>
-         7. <a href="ExSheets/NatSciMaths/maths_a_sheet_7.pdf">Taylor series, and Newton-Raphson iteration</a><br><br>
+         7. <a href="ExSheets/NatSciMaths/maths_a_sheet_7.pdf">Taylor series, and Newton-Raphson iteration</a><br>
          8. <a href="ExSheets/NatSciMaths/maths_a_sheet_8.pdf">Probability spaces, conditional probability, and combinatorics</a><br>
          9. <a href="ExSheets/NatSciMaths/maths_a_sheet_9.pdf">Discrete and continuous random variables, and functions of random variables</a><br>
 
@@ -84,9 +84,9 @@
       <h3>Mathematics B</h3>
       <p>1. <a href="ExSheets/NatSciMaths/maths_b_sheet_1.pdf">Basics of vector geometry, and the scalar and vector products</a><br>
         2. <a href="ExSheets/NatSciMaths/maths_b_sheet_2.pdf">Further vector geometry, triple products, vector area, and polar coordinate systems</a><br>
-        3. <a href="ExSheets/NatSciMaths/maths_b_sheet_3.pdf">Complex numbers and hyperbolic functions</a><br><br>
-        4. <a href="ExSheets/NatSciMaths/maths_b_sheet_4.pdf">Differential calculus, limits and continuity</a><br><br>
-        5. <a href="ExSheets/NatSciMaths/maths_b_sheet_5.pdf">Infinite series and Taylor series</a><br><br>
+        3. <a href="ExSheets/NatSciMaths/maths_b_sheet_3.pdf">Complex numbers and hyperbolic functions</a><br>
+        4. <a href="ExSheets/NatSciMaths/maths_b_sheet_4.pdf">Differential calculus, limits and continuity</a><br>
+        5. <a href="ExSheets/NatSciMaths/maths_b_sheet_5.pdf">Infinite series and Taylor series</a><br>
         6. <a href="ExSheets/NatSciMaths/maths_b_sheet_6.pdf">Single-variable integration</a><br>
         7. Multivariable integration and Gaussian integrals<br>
         8. Probability spaces, conditional probability, and combinatorics<br>
