Added more Maths B sheets

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -88,16 +88,16 @@
         4. <a href="ExSheets/NatSciMaths/maths_b_sheet_4.pdf">Differential calculus, limits and continuity</a><br>
         5. <a href="ExSheets/NatSciMaths/maths_b_sheet_5.pdf">Infinite series and Taylor series</a><br>
         6. <a href="ExSheets/NatSciMaths/maths_b_sheet_6.pdf">Single-variable integration</a><br>
-        7. Multivariable integration and Gaussian integrals<br>
-        8. Probability spaces, conditional probability, and combinatorics<br>
-        9. Discrete and continuous random variables, and functions of random variables<br>
+        7. <a href="ExSheets/NatSciMaths/maths_b_sheet_7.pdf">Multivariable integration and Gaussian integrals</a><br>
+        8. <a href="ExSheets/NatSciMaths/maths_b_sheet_8.pdf">Probability spaces, conditional probability, and combinatorics</a><br>
+        9. <a href="ExSheets/NatSciMaths/maths_b_sheet_9.pdf">Discrete and continuous random variables, and functions of random variables</a><br>
 
          ❧ <i>Michaelmas revision sheet</i><br>
 
-         10. First-order ordinary differential equations<br>
+         10. <a href="ExSheets/NatSciMaths/maths_b_sheet_10.pdf">First-order ordinary differential equations</a><br>
          11. Linear ordinary differential equations<br>
-         12. Partial differentiation and differentials<br>
-         13. The multivariable chain rule and exact differentials<br>
+         12. <a href="ExSheets/NatSciMaths/maths_b_sheet_12.pdf">Partial differentiation, differentials, and the single-variable chain rule with multivariable functions</a><br>
+         13. <a href="ExSheets/NatSciMaths/maths_b_sheet_13.pdf">The multivariable chain rule, exact differentials, and applications in thermodynamics</a><br>
          14. Contour sketching and conditional optimisation<br>
          15. Scalar and vector fields, and line integrals<br>
          16. Surface integrals and the integral theorems<br>
