Updated Sheets 1 and 2 for NatSci Maths IA, and added solutions to secret page.

--- a/secret.html
+++ b/secret.html
@@ -42,6 +42,77 @@
       7. <a href="examples_sheet_solutions/stats_rough.pdf">Part IB Statistics (Rough and incomplete)</a><br>
     </p>
 
+    <hr width=90%>
+
+  <h2> Part IA Mathematics for Natural Sciences: Solutions </h2>
+
+ <div class="row">
+  <div class="column">
+
+      <h3>Mathematics A</h3>
+      <p>1. Basics of vector geometry, and the scalar product<br>
+         2. The vector product, and triple products of vectors<br>
+         3. Vector area, polar coordinate systems, and complex numbers<br>
+         4. More complex numbers, and hyperbolic functions<br>
+         5. Differential calculus, Riemann sums, and basic integrals<br>
+         6. Methods of integration<br>
+         7. Taylor series, and Newton-Raphson iteration<br>
+         8. Probability spaces, conditional probability, and combinatorics<br>
+         9. Discrete and continuous random variables, and functions of random variables<br>
+
+         ❧ <i>Michaelmas revision sheet</i><br>
+
+         10. First-order ordinary differential equations<br>
+         11. Linear ordinary differential equations<br>
+         12. Partial differentiation and differentials<br>
+         13. The multivariable chain rule and exact differentials<br>
+         14. Contour sketching<br>
+         15. Multivariable integration and Gaussian integrals<br>
+         16. Scalar and vector fields, and line integrals<br>
+         17. Surface integrals and the integral theorems<br>
+
+         ❧ <i>Lent revision sheet</i><br>
+
+         18. Matrix algebra I<br>
+         19. Matrix algebra II<br>
+         20. Fourier series
+      </p>
+</div>
+
+<div class="column">
+      <h3>Mathematics B</h3>
+      <p>1. <a href="ExSheets/NatSciMaths/MathSolutions/maths_b_sheet_1_solutions.pdf">Basics of vector geometry, and the scalar and vector products</a><br>
+        2. <a href="ExSheets/NatSciMaths/MathSolutions/maths_b_sheet_2_solutions.pdf">Further vector geometry, triple products, vector area, and polar coordinate systems</a><br>
+        3. Complex numbers and hyperbolic functions<br>
+        4. Differential calculus, limits and continuity<br>
+        5. Infinite series and Taylor series<br>
+        6. Single-variable integration<br>
+        7. Multivariable integration and Gaussian integrals<br>
+        8. Probability spaces, conditional probability, and combinatorics<br>
+        9. Discrete and continuous random variables, and functions of random variables<br>
+
+         ❧ <i>Michaelmas revision sheet</i><br>
+
+         10. First-order ordinary differential equations<br>
+         11. Linear ordinary differential equations<br>
+         12. Partial differentiation, differentials, and the single-variable chain rule with multivariable functions<br>
+         13. The multivariable chain rule, exact differentials, and applications in thermodynamics<br>
+         14. Contour sketching and conditional optimisation<br>
+         15. Scalar and vector fields, and line integrals<br>
+         16. Surface integrals and the integral theorems<br>
+         17. Fourier series<br>
+
+         ❧ <i>Lent revision sheet</i><br>
+
+         18. Matrix algebra I<br>
+         19. Matrix algebra II<br>
+         20. Partial differential equations
+      </p>
+
+</div>
+</div>
+
+    <hr width=90%>
   <h2> Part IA Mathematics for Natural Sciences: Past Paper Solutions </h2>
 
   <p>
