--- a/secret.html
+++ b/secret.html
@@ -83,7 +83,7 @@
       <h3>Mathematics B</h3>
       <p>1. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_1_solutions.pdf">Basics of vector geometry, and the scalar and vector products</a><br>
         2. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_2_solutions.pdf">Further vector geometry, triple products, vector area, and polar coordinate systems</a><br>
-        3. Complex numbers and hyperbolic functions<br>
+        3. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_3_solutions.pdf">Complex numbers and hyperbolic functions</a><br>
         4. Differential calculus, limits and continuity<br>
         5. Infinite series and Taylor series<br>
         6. Single-variable integration<br>
