Added integration sheet solutions

--- a/secret.html
+++ b/secret.html
@@ -86,7 +86,7 @@
         3. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_3_solutions.pdf">Complex numbers and hyperbolic functions</a><br>
         4. Differential calculus, limits and continuity<br>
         5. Infinite series and Taylor series<br>
-        6. Single-variable integration<br>
+        6. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_6_solutions.pdf">Single-variable integration</a><br>
         7. Multivariable integration and Gaussian integrals<br>
         8. Probability spaces, conditional probability, and combinatorics<br>
         9. Discrete and continuous random variables, and functions of random variables<br>
