Added solutions for several Maths A sheets

--- a/secret.html
+++ b/secret.html
@@ -50,12 +50,12 @@
   <div class="column">
 
       <h3>Mathematics A</h3>
-      <p>1. Basics of vector geometry, and the scalar product<br>
-         2. The vector product, and triple products of vectors<br>
-         3. Vector area, polar coordinate systems, and complex numbers<br>
-         4. More complex numbers, and hyperbolic functions<br>
+      <p>1. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_1_solutions.pdf">Basics of vector geometry, and the scalar product</a><br>
+         2. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_2_solutions.pdf">The vector product, and triple products of vectors</a><br>
+         3. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_3_solutions.pdf">Vector area, polar coordinate systems, and complex numbers</a><br>
+         4. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_4_solutions.pdf">More complex numbers, and hyperbolic functions</a><br>
          5. Differential calculus, Riemann sums, and basic integrals<br>
-         6. Methods of integration<br>
+         6. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_6_solutions.pdf">Methods of integration</a><br>
          7. Taylor series, and Newton-Raphson iteration<br>
          8. Probability spaces, conditional probability, and combinatorics<br>
          9. Discrete and continuous random variables, and functions of random variables<br>
