--- a/physics_notes.html
+++ b/physics_notes.html
@@ -63,10 +63,10 @@
 
          ❧ <i>Michaelmas revision sheet</i><br>
 
-         10. First-order ordinary differential equations<br>
+         10. <a href="ExSheets/NatSciMaths/maths_a_sheet_10.pdf">First-order ordinary differential equations</a><br>
          11. Linear ordinary differential equations<br>
-         12. Partial differentiation and differentials<br>
-         13. The multivariable chain rule and exact differentials<br>
+         12. <a href="ExSheets/NatSciMaths/maths_a_sheet_13.pdf">Partial differentiation, and the chain rule for multivariable functions</a><br>
+         13. <a href="ExSheets/NatSciMaths/maths_a_sheet_14.pdf">Exact differentials, algebra of differentials, and applications in thermodynamics</a><br>
          14. Contour sketching<br>
          15. Multivariable integration and Gaussian integrals<br>
          16. Scalar and vector fields, and line integrals<br>
