Added FAQs IA Maths

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -45,7 +45,10 @@
       Part IA Mathematics for Natural Sciences</h2>
 <p><i>Course theme music: <a href="https://open.spotify.com/track/0fxUGOzBYJGKgs5ZKw1Em5?si=0527e3ada2104850">12345, by Em Beihold</a></i><br><br>
 
-    In 2024-2025, I supervised the Part IA Mathematics for Natural Sciences course, and will be doing so again in 2025-2026. Here are my examples sheets.</p>
+    In 2024-2025, I supervised the Part IA Mathematics for Natural Sciences course, and will be doing so again in 2025-2026. For my Lucy Cavendish students, I have my own problem sheets which are given below.<br><br>
+
+<a href"ExSheets/NatSciMaths/ia_maths_faqs.pdf">Here</a> is a useful document detailing some frequently asked questions about first-year maths; I would advise you to read it before our first supervision. 
+</p>
 
  <div class="row">
   <div class="column">
