--- a/physics_notes.html
+++ b/physics_notes.html
@@ -42,13 +42,15 @@
 
     <h2>
       <!-- <img src="pochhammer.png" alt="Pochhammer Contour" style="float: right;   width: 400px;  margin-left:0px; height: auto; padding:20px; margin-top:0px; padding-bottom:20px;"> -->
-      Part IA Mathematics for Natural Sciences</h2>
+      Part IA Mathematics for Natural Sciences<img src="ExSheets/NatSciMaths/scalar_triple_product.png" alt="Scalar triple product" style="float: right;   width: 300px;  margin-left:5px; height: auto; padding:60px; margin-top:-60px; padding-bottom:20px;"> </h2>
 <p><i>Course theme music: <a href="https://open.spotify.com/track/0fxUGOzBYJGKgs5ZKw1Em5?si=0527e3ada2104850">12345, by Em Beihold</a></i><br><br>
 
     In 2024-2025, I supervised the Part IA Mathematics for Natural Sciences course, and will be doing so again in 2025-2026. For my Lucy Cavendish students, I have my own problem sheets which are given below.<br><br>
 
 <a href"ExSheets/NatSciMaths/ia_maths_faqs.pdf">Here</a> is a useful document detailing some frequently asked questions about first-year maths; I would advise you to read it before our first supervision. 
 </p>
+
+<hr width=50%>
 
  <div class="row">
   <div class="column">
