--- a/physics_notes.html
+++ b/physics_notes.html
@@ -47,7 +47,7 @@
 
     In 2024-2025, I supervised the Part IA Mathematics for Natural Sciences course, and will be doing so again in 2025-2026. For my Lucy Cavendish students, I have my own problem sheets which are given below.<br><br>
 
-<a href"ExSheets/NatSciMaths/ia_maths_faqs.pdf">Here</a> is a useful document detailing some frequently asked questions about first-year maths; I would advise you to read it before our first supervision. 
+<a href="ExSheets/NatSciMaths/ia_maths_faqs.pdf">Here</a> is a useful document detailing some frequently asked questions about first-year maths; I would advise you to read it before our first supervision. 
 </p>
 
 <hr width=50%>
