Added Sheet 0 for both Maths A and B

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -50,6 +50,7 @@
 <a href="ExSheets/NatSciMaths/ia_maths_faqs.pdf">Here</a> is a useful document detailing some frequently asked questions about first-year maths; I would advise you to read it before our first supervision. 
 </p>
 
+<div style="text-align: center;"><b>Mathematics A/B Sheet 0:</b> <a href="ExSheets/NatSciMaths/maths_sheet_0.pdf">Basic skills</a></div>
 
  <div class="row">
   <div class="column">
