--- a/physics_notes.html
+++ b/physics_notes.html
@@ -51,7 +51,7 @@
 </p>
 
 <p>
-<center><b>Mathematics A/B Sheet 0:</b> <a href="ExSheets/NatSciMaths/maths_sheet_0.pdf">Basic skills</a></center><br>
+<center><b>Mathematics A/B, Sheet 0:</b> <a href="ExSheets/NatSciMaths/maths_sheet_0.pdf">Basic skills</a></center><br>
 </p>
 
  <div class="row">
