Added another picture

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -117,8 +117,11 @@
          20. Partial differential equations
       </p>
 
+<img src="ExSheets/NatSciMaths/vector_area_projection.png" alt="Scalar triple product" style="float: center;   width: 300px;  margin-left:5px; height: auto; padding:60px; margin-top:-60px; padding-bottom:20px;">
+
 </div>
 </div>
+
 
 <!--
     <hr width=90%>
