--- a/physics_notes.html
+++ b/physics_notes.html
@@ -50,9 +50,8 @@
 <a href="ExSheets/NatSciMaths/ia_maths_faqs.pdf">Here</a> is a useful document detailing some frequently asked questions about first-year maths; I would advise you to read it before our first supervision. 
 </p>
 
-<p>
-<b>Mathematics A/B, Sheet 0:</b> <a href="ExSheets/NatSciMaths/maths_sheet_0.pdf">Basic skills</a><br>
-</p>
+<h3>Mathematics A and B</h3>
+<p>0. <a href="ExSheets/NatSciMaths/maths_sheet_0.pdf">Basic skills</a></p>
 
  <div class="row">
   <div class="column">
