Tried to improve diagram

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -116,7 +116,7 @@
          20. Partial differential equations
       </p>
 
-<img src="ExSheets/NatSciMaths/vector_area_projection.png" alt="Scalar triple product" style="float: center;   width: 300px;  margin-left:5px; height: auto; padding:60px; margin-top:-60px; padding-bottom:20px;">
+<img src="ExSheets/NatSciMaths/vector_area_projection.png" alt="Vector area projection" style="float: center;   width: 500px; height: auto; padding:60px; margin-top:-60px; padding-bottom:20px;">
 
 </div>
 </div>
