Tried to centre image

--- a/physics_notes.html
+++ b/physics_notes.html
@@ -120,7 +120,7 @@
 </div>
 </div>
 
-<img src="ExSheets/NatSciMaths/vector_area_projection.png" alt="Vector area projection" style="float: center;   width: 500px; height: auto; padding:60px; margin-top:-60px; padding-bottom:20px;">
+<img src="ExSheets/NatSciMaths/vector_area_projection.png" alt="Vector area projection" style="display: block; margin-left: auto; margin-right: auto; width: 50%">
 
 <!--
     <hr width=90%>
