Removed weird line break from secret page

--- a/secret.html
+++ b/secret.html
@@ -29,7 +29,7 @@
 <div class="container">
   <p> <br>On this *secret* page, you can find solutions for some of the examples sheets and past papers for both the mathematical tripos and the physical natural sciences tripos at Cambridge.<br></p>
 
-<hr width=90%><br>
+<hr width=90%>
 
   <h2> Mathematical Tripos Examples Sheet Solutions </h2>
 
