--- a/secret.html
+++ b/secret.html
@@ -42,6 +42,13 @@
       7. <a href="examples_sheet_solutions/stats_rough.pdf">Part IB Statistics (Rough and incomplete)</a><br>
     </p>
 
+<hr width=90%>
+
+  <h2> Lucy Cavendish Bridging Week Solutions </h2>
+
+<p> <a href="ExSheets/NatSciMaths/MathsSolutions/preparatory_sheet_solutions.pdf">Preparatory mathematics examples sheet solutions</a><br>
+Introduction to data and probability examples sheet solutions</a></p>
+
     <hr width=90%>
 
   <h2> Part IA Mathematics for Natural Sciences: Solutions </h2>
