Some small formatting adjustments

--- a/secret.html
+++ b/secret.html
@@ -46,8 +46,8 @@
 
   <h2> Lucy Cavendish Bridging Week Solutions </h2>
 
-<p> <a href="ExSheets/NatSciMaths/MathsSolutions/preparatory_sheet_solutions.pdf">Preparatory mathematics examples sheet solutions</a><br>
-Introduction to data and probability examples sheet solutions</a></p>
+<p> <a href="ExSheets/NatSciMaths/MathsSolutions/preparatory_sheet_solutions.pdf">Preparatory mathematics examples sheet: Solutions</a><br>
+Introduction to data and probability: Solutions</a></p>
 
     <hr width=90%>
 
