Added solutions to Sheet 0

--- a/secret.html
+++ b/secret.html
@@ -53,6 +53,9 @@ Introduction to data and probability: Solutions</a></p>
 
   <h2> Part IA Mathematics for Natural Sciences: Solutions </h2>
 
+<h3>Mathematics A and B</h3>
+<p>0. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_ab_sheet_0_solutions.pdf">Basic skills</a></p>
+
  <div class="row">
   <div class="column">
 
