--- a/secret.html
+++ b/secret.html
@@ -66,7 +66,7 @@ Introduction to data and probability: Solutions</a></p>
          4. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_4_solutions.pdf">More complex numbers, and hyperbolic functions</a><br>
          5. Differential calculus, Riemann sums, and basic integrals<br>
          6. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_6_solutions.pdf">Methods of integration</a><br>
-         7. Taylor series, and Newton-Raphson iteration<br>
+         7. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_7_solutions.pdf">Taylor series, and Newton-Raphson iteration</a><br>
          8. Probability spaces, conditional probability, and combinatorics<br>
          9. Discrete and continuous random variables, and functions of random variables<br>
 
@@ -95,7 +95,7 @@ Introduction to data and probability: Solutions</a></p>
         2. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_2_solutions.pdf">Further vector geometry, triple products, vector area, and polar coordinate systems</a><br>
         3. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_3_solutions.pdf">Complex numbers and hyperbolic functions</a><br>
         4. Differential calculus, limits and continuity<br>
-        5. Infinite series and Taylor series<br>
+        5. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_5_solutions.pdf">Infinite series and Taylor series</a><br>
         6. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_6_solutions.pdf">Single-variable integration</a><br>
         7. Multivariable integration and Gaussian integrals<br>
         8. Probability spaces, conditional probability, and combinatorics<br>
