Removed promise of data and prob solutions

--- a/secret.html
+++ b/secret.html
@@ -46,8 +46,7 @@
 
   <h2> Lucy Cavendish Bridging Week Solutions </h2>
 
-<p> <a href="ExSheets/NatSciMaths/MathsSolutions/preparatory_sheet_solutions.pdf">Preparatory mathematics examples sheet: Solutions</a><br>
-Introduction to data and probability: Solutions</a></p>
+<p> <a href="ExSheets/NatSciMaths/MathsSolutions/preparatory_sheet_solutions.pdf">Preparatory mathematics examples sheet: Solutions</a></p>
 
     <hr width=90%>
 
