Added Maths A Sheet 5 solutions and updated sheet

--- a/secret.html
+++ b/secret.html
@@ -63,7 +63,7 @@
          2. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_2_solutions.pdf">The vector product, and triple products of vectors</a><br>
          3. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_3_solutions.pdf">Vector area, polar coordinate systems, and complex numbers</a><br>
          4. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_4_solutions.pdf">More complex numbers, and hyperbolic functions</a><br>
-         5. Differential calculus, Riemann sums, and basic integrals<br>
+         5. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_5_solutions.pdf">Differential calculus, Riemann sums, and basic integrals</a><br>
          6. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_6_solutions.pdf">Methods of integration</a><br>
          7. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_7_solutions.pdf">Taylor series, and Newton-Raphson iteration</a><br>
          8. Probability spaces, conditional probability, and combinatorics<br>
