--- a/secret.html
+++ b/secret.html
@@ -93,7 +93,7 @@
       <p>1. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_1_solutions.pdf">Basics of vector geometry, and the scalar and vector products</a><br>
         2. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_2_solutions.pdf">Further vector geometry, triple products, vector area, and polar coordinate systems</a><br>
         3. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_3_solutions.pdf">Complex numbers and hyperbolic functions</a><br>
-        4. Differential calculus, limits and continuity<br>
+        4. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_4_solutions.pdf">Differential calculus, limits and continuity</a><br>
         5. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_5_solutions.pdf">Infinite series and Taylor series</a><br>
         6. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_6_solutions.pdf">Single-variable integration</a><br>
         7. Multivariable integration and Gaussian integrals<br>
