Added solutions for Sheet 8 Maths A, Maths B

--- a/secret.html
+++ b/secret.html
@@ -66,7 +66,7 @@
          5. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_5_solutions.pdf">Differential calculus, Riemann sums, and basic integrals</a><br>
          6. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_6_solutions.pdf">Methods of integration</a><br>
          7. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_7_solutions.pdf">Taylor series, and Newton-Raphson iteration</a><br>
-         8. Probability spaces, conditional probability, and combinatorics<br>
+         8. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_8_solutions.pdf">Probability spaces, conditional probability, and combinatorics</a><br>
          9. Discrete and continuous random variables, and functions of random variables<br>
 
          ❧ <i>Michaelmas revision sheet</i><br>
@@ -97,7 +97,7 @@
         5. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_5_solutions.pdf">Infinite series and Taylor series</a><br>
         6. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_6_solutions.pdf">Single-variable integration</a><br>
         7. Multivariable integration and Gaussian integrals<br>
-        8. Probability spaces, conditional probability, and combinatorics<br>
+        8. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_8_solutions.pdf">Probability spaces, conditional probability, and combinatorics</a><br>
         9. Discrete and continuous random variables, and functions of random variables<br>
 
          ❧ <i>Michaelmas revision sheet</i><br>
