Added Sheet 9 solutions

--- a/secret.html
+++ b/secret.html
@@ -67,7 +67,7 @@
          6. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_6_solutions.pdf">Methods of integration</a><br>
          7. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_7_solutions.pdf">Taylor series, and Newton-Raphson iteration</a><br>
          8. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_8_solutions.pdf">Probability spaces, conditional probability, and combinatorics</a><br>
-         9. Discrete and continuous random variables, and functions of random variables<br>
+         9. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_shset_9_solutions.pdf">Discrete and continuous random variables, and functions of random variables</a><br>
 
          ❧ <i>Michaelmas revision sheet</i><br>
 
@@ -98,7 +98,7 @@
         6. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_6_solutions.pdf">Single-variable integration</a><br>
         7. Multivariable integration and Gaussian integrals<br>
         8. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_8_solutions.pdf">Probability spaces, conditional probability, and combinatorics</a><br>
-        9. Discrete and continuous random variables, and functions of random variables<br>
+        9. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_9_solutions.pdf">Discrete and continuous random variables, and functions of random variables</a><br>
 
          ❧ <i>Michaelmas revision sheet</i><br>
 
