Added Maths B Sheet 12 solutions

--- a/secret.html
+++ b/secret.html
@@ -104,7 +104,7 @@
 
          10. First-order ordinary differential equations<br>
          11. Linear ordinary differential equations<br>
-         12. Partial differentiation, differentials, and the single-variable chain rule with multivariable functions<br>
+         12. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_12_solutions.pdf">Partial differentiation, differentials, and the single-variable chain rule with multivariable functions</a><br>
          13. The multivariable chain rule, exact differentials, and applications in thermodynamics<br>
          14. Contour sketching and conditional optimisation<br>
          15. Scalar and vector fields, and line integrals<br>
