Added Sheet 12 solutions for Maths A

--- a/secret.html
+++ b/secret.html
@@ -73,7 +73,7 @@
 
          10. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_10_solutions.pdf">First-order ordinary differential equations</a><br>
          11. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_11_solutions.pdf">Linear ordinary differential equations</a><br>
-         12. Partial differentiation and differentials<br>
+         12. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_12_solutions.pdf">Partial differentiation, and the chain rule for multivariable functions</a><br>
          13. The multivariable chain rule and exact differentials<br>
          14. Contour sketching<br>
          15. Multivariable integration and Gaussian integrals<br>
