Added Maths A Sheet 13 solutions

--- a/secret.html
+++ b/secret.html
@@ -74,7 +74,7 @@
          10. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_10_solutions.pdf">First-order ordinary differential equations</a><br>
          11. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_11_solutions.pdf">Linear ordinary differential equations</a><br>
          12. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_12_solutions.pdf">Partial differentiation, and the chain rule for multivariable functions</a><br>
-         13. The multivariable chain rule and exact differentials<br>
+         13. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_a_sheet_13_solutions.pdf">Exact differentials, algebra of differentials, and applications in thermodynamics</a><br>
          14. Contour sketching<br>
          15. Multivariable integration and Gaussian integrals<br>
          16. Scalar and vector fields, and line integrals<br>
