--- a/physics_notes.html
+++ b/physics_notes.html
@@ -74,7 +74,7 @@
          12. <a href="ExSheets/NatSciMaths/maths_a_sheet_12.pdf">Partial differentiation, and the chain rule for multivariable functions</a><br>
          13. <a href="ExSheets/NatSciMaths/maths_a_sheet_13.pdf">Exact differentials, algebra of differentials, and applications in thermodynamics</a><br>
          14. <a href="ExSheets/NatSciMaths/maths_a_sheet_14.pdf">Gradient, directional derivatives, and contour sketching</a><br>
-         15. Multivariable integration and Gaussian integrals<br>
+         15. <a href="ExSheets/NatSciMaths/maths_a_sheet_15.pdf">Multivariable integration and Gaussian integrals</a><br>
          16. Scalar and vector fields, and line integrals<br>
          17. Surface integrals and the integral theorems<br>
 
