Added Sheet 13 solutions for Maths B

--- a/secret.html
+++ b/secret.html
@@ -105,7 +105,7 @@
          10. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_10_solutions.pdf">First-order ordinary differential equations</a><br>
          11. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_11_solutions.pdf">Linear ordinary differential equations</a><br>
          12. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_12_solutions.pdf">Partial differentiation, differentials, and the single-variable chain rule with multivariable functions</a><br>
-         13. The multivariable chain rule, exact differentials, and applications in thermodynamics<br>
+         13. <a href="ExSheets/NatSciMaths/MathsSolutions/maths_b_sheet_13_solutions.pdf">The multivariable chain rule, exact differentials, and applications in thermodynamics</a><br>
          14. Contour sketching and conditional optimisation<br>
          15. Scalar and vector fields, and line integrals<br>
          16. Surface integrals and the integral theorems<br>
